--- a/style.css
+++ b/style.css
@@ -1,7 +1,123 @@
 *{
-    border: 1px solid red;
+    #border: 1px solid red;
+    font-family: Arial, Helvetica, sans-serif;
+    box-sizing: border-box;
+    margin: 0;
 }
 
-body{
+body {
     display: flex;
+    background-color: rgb(250, 250, 250);
 }
+
+.background {
+    background-image: url(img/wallpaper.jpg);
+    background-size: cover;
+    flex: 1;
+    color: white;
+    position: relative;
+    height: 768px;
+    flex-direction: column-reverse;
+    align-items: center;
+}
+
+.odin-logo {
+    width: 15%;
+    height: 15%;
+}
+
+.form-field {
+    flex: 2;
+    margin: auto;
+}
+
+.background>:first-child {
+    background-color: rgb(0, 0, 0, .5);
+    font-size: 5rem;
+    position: absolute;
+    top: 2.5em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem;
+}
+
+.credits{
+    text-align: center;
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+}
+
+.background a {
+    color: white;
+}
+
+.form-field>* {
+    padding: 2em;
+}
+
+.intro {
+    font-size: 1.6rem;
+    font-weight: bold;
+    #border: 1px solid red;
+
+}
+
+form {
+    background-color: white;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
+    #border: 1px solid red;
+}
+
+fieldset {
+    width: 80%;
+    border: none;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+legend {
+    padding-bottom: .6em;
+    font-size: 1.3rem;
+    font-weight: bold;
+}
+
+fieldset div {
+    width: 50%;
+    padding: .5em 0;
+}
+
+label {
+    display: block  ;
+}
+
+input {
+    width: 80%;
+    border: 1px solid #E5E7EB;
+    border-radius: 5px;
+    padding: .3em;
+}
+
+button {
+    background-color: #596D48;
+    padding: 10px 40px;
+    margin-top: 1.3em;
+    border: none;
+    box-shadow: 2px 2px 5px rgb(199, 199, 199);
+    color: white;
+    font-weight: bold;
+    border-radius: 10px;
+
+}
+
+input:focus {
+    border: 1px solid blue;
+    box-shadow: 1px 1px 5px blue;
+}
+
+#confirmPassword-feedback {
+    color: red;
+    display: block;
+  }
+  
